--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -582,9 +582,7 @@
         <!-- Slide 1 -->
         <div class="slide">
           <p style="margin-bottom: 10px">
-            Click
-            <b>Add a new device</b>
-            .
+            Click <b>Add a new device</b>.
           </p>
           <!-- Universal -->
           <div class="hidden-panel traditional-panel">
@@ -599,19 +597,13 @@
         <div class="slide">
           <div class="hidden-panel traditional-panel">
             <p>
-              Click
-              <b>Duo Mobile</b>
-              .
+              Click <b>Duo Mobile</b>.
             </p>
             <img src="/images/universal/1.png" />
           </div>
           <div class="hidden-panel universal-panel">
             <p>
-              Click
-              <b>Tablet</b>
-              , then
-              <b>iOS</b>
-              .
+              Click <b>Tablet</b>, then <b>iOS</b>.
             </p>
             <img src="/images/traditional/1.png" />
           </div>
@@ -620,19 +612,13 @@
         <div class="slide">
           <div class="hidden-panel traditional-panel">
             <p>
-              Click
-              <b>I have a tablet</b>
-              , then
-              <b>Next</b>
-              .
+              Click <b>I have a tablet</b>, then <b>Next</b>.
             </p>
             <img src="/images/universal/2.png" />
           </div>
           <div class="hidden-panel universal-panel">
             <p>
-              Click
-              <b>I have Duo Mobile installed</b>
-              .
+              Click <b>I have Duo Mobile installed</b>.
             </p>
             <img src="/images/traditional/2.png" />
           </div>
@@ -673,14 +659,11 @@
     <!-- Activation success page -->
     <div class="screen" id="activationSuccess">
       <p style="margin-bottom: 10px">
-        <b>Activated!</b>
-        Device name:
+        <b>Activated!</b> Device name:
       </p>
       <p style="margin: 0" id="newDeviceDisplay"></p>
       <p>
-        Next time you login, click
-        <b>Other Options</b>
-        , then send it to this new device.
+        Next time you login, click <b>Other Options</b>, then send it to this new device.
       </p>
       <div class="oneSlide">
         <img src="/images/tutorial.png" />
@@ -709,17 +692,13 @@
     <div class="screen" id="failedAttempts">
       <div class="oneSlide">
         <p>
-          Send a push to Auto 2FA by clicking
-          <b>Other options</b>
-          .
+          Send a push to Auto 2FA by clicking <b>Other options</b>.
         </p>
         <img src="/images/tutorial.png" />
         <p>Then click the extension to approve the login.</p>
       </div>
       <p>
-        Learn more
-        <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/README.md#no-logins-found" target="_blank">here</a>
-        .
+        Learn more <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/README.md#no-logins-found" target="_blank">here</a>.
       </p>
       <button type="submit" id="failureButton">Got it</button>
     </div>
