--- a/firefox/welcome.html
+++ b/firefox/welcome.html
@@ -60,7 +60,7 @@
     </style>
   </head>
   <body>
-    <!-- DuOSU logo -->
+    <!-- Logo -->
     <img id="logo" src="images/Auto 2FA.svg" class="expand" width="200">
     <h1 id="splash">Welcome to <b>Auto 2FA</b>.</h1>
 
@@ -70,8 +70,8 @@
         <source src="images/tutorial.mov" type="video/mp4">
         Your browser does not support the video tag.
       </video> -->
-      <h3>Open Auto 2FA for activation instructions. You'll need to find your organization's Duo Mobile device manager page.</h3>
-      <p style="margin-bottom: 50px">Visit the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md">website</a> for more detailed steps.</p>
+      <h3>You'll need to navigate to your organization's Duo Mobile device manager website to add Auto 2FA as your new device.</h3>
+      <p style="margin-bottom: 50px">Visit the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md">website</a> for more details.</p>
     </div>
   </body>
   <script src="welcome.js"></script>
