--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -7,6 +7,7 @@
 </head>
 
 <!-- display-none prevents weird visual artifacts from appearing while loading. JS clears the display -->
+
 <body id="content" style="display: none">
   <div style="display: flex; gap: 8px; align-items: center">
     <!-- Logo -->
@@ -39,9 +40,9 @@
   <!-- Welcome screen -->
   <div class="screen" id="intro">
     <h4>
-      This extension is experimental. Functionality could break at any time.
-      Always keep backup devices on your account. This extension is not
-      recognized, endorsed, or affiliated with Duo Mobile or Cisco Technology.
+      By using this extension, you understand the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/README.md#security"
+        target="_blank">risks</a>, including
+      unauthorized access or data loss. The developers are not liable for any consequences.
     </h4>
     <hr />
     <h4>
