options panel rework

--- a/chrome/options.html
+++ b/chrome/options.html
@@ -39,6 +39,9 @@
     }
 
     table {
+      /* Margin auto for firefox */
+      margin-left: auto;
+      margin-right: auto;
       justify-self: center;
       max-width: 600px;
     }
@@ -94,14 +97,6 @@
           Import
         </button>
       </td>
-      <!-- <th id="importSplash">Manage data</th>
-      <td class="inputButtonCouple">
-        <input type="file" id="importFile" accept=".txt" style="display: none" />
-        <button id="importButton" style="border-bottom: inherit">
-          Import
-        
-        <button type="submit" id="exportTOTPButton">Export TOTPs</button>
-      </td> -->
     </tr>
     <tr>
       <th>
