--- a/firefox/welcome.html
+++ b/firefox/welcome.html
@@ -71,7 +71,7 @@
         Your browser does not support the video tag.
       </video> -->
       <h3>You'll need to navigate to your organization's Duo Mobile device manager website to add Auto 2FA as your new device.</h3>
-      <p style="margin-bottom: 50px">Visit the <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md">website</a> for more details.</p>
+      <p style="margin-bottom: 50px">Click <a href="https://github.com/FreshSupaSulley/Auto-2FA/blob/main/TUTORIAL.md">here</a> for more details.</p>
     </div>
   </body>
   <script src="welcome.js"></script>
